@@ -1,3 +1,9 @@
+2007-07-27  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* Mono.Addins.Database/AddinDatabase.cs,
+	  Mono.Addins.Database/AddinScanner.cs: Better error reporting for
+	  missing assemblies.
+
 2007-07-25  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* Mono.Addins/AddinSessionService.cs,
